--- a/gb/23/8/14/n14053512.md
+++ b/gb/23/8/14/n14053512.md
@@ -18,10 +18,6 @@
 <figure id="14053519" aria-describedby="caption-14053519" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14053519-629612-450x278.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/08/id14053519-629612-450x278.jpg" alt="北区青聚点于津寮创生基地办理交流小聚。" width="500" /></a><figcaption id="caption-14053519" class="wp-caption-text">北区青聚点于津寮创生基地办理交流小聚。（桃园市青年局提供）</figcaption></figure>
 <p>侯佳龄表示，青年局从2021年开始和教育部青年发展署携手打造“北区青聚点”，办理跨领域、跨县市地方创生交流学习，期望藉由此次的连江交流，汇集各县市青年的创意与能量，强化彼此的连结网络，开启未来合作的新契机！◇</p>
 <p>责任编辑：昌英</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/22/n12827479.md#1">红砖屋变身“青聚点”邀青年讨论未来面貌</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/22/n13664796.md#1">宜居东部请问我 “东区青聚点”开幕</a></li>
@@ -30,40 +26,34 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/30/n13855679.md#1">北区七县市地方创生平台 北区青聚点交流会</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13931836.md#1">青年创业家的后盾 桃园青年局青创基地招募</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13982840.md#1">积极推动地方创生 陈建仁：朝“均衡台湾”前进</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053476.md#1">桃园疗养院护理科鼓励大家 爱要即时说出口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053466.md#1">Me Too运动：重塑心理健康与性暴力问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053460.md#1">有闲来尞中坜城市故事馆群  常民生活当闹热</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105234.md#1">净化人心 第24届桃园市中华文化经典会考登场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105231.md#1">“2023世界中风日在桃园”预防中风、减少失能</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105201.md#1">丘美珍个展 财政部北区国税局二楼艺文走廊</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010938.md#1" target="_blank">古罗马迫害基督徒与中共迫害法轮功对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/6/n9230640.md#1" target="_blank">对中国法轮功学员被迫害的调查 (2)</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/6/2/n11295844.md#1" target="_blank">沧海：折寿三十年与延寿三十年</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/6/7/n9237316.md#1" target="_blank">对中国法轮功学员被迫害的调查（3）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040667.md#1">地狱到底为什么存在？无间地狱哪里是尽头</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048452.md#1">一叶知秋立秋到  秋季养生三心法和好食材</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049548.md#1">【未解之谜】神通第一的莲花色</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051960.md#1">【未解之谜】探秘中国第一神山</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046440.md#1">劫数天定难以避免吗？明末清初历史见证</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14052915.md#1">【新闻看点】指习是“坏人”？ 拜登发力推红墙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052370.md#1">【环球直击】 华裔记者成蕾狱中发声 澳总理关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14052993.md#1">【新闻五人行】赖清德访美 中共大动作或被打脸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052489.md#1">分析：中共危机四起 习近平隐身11天</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14052852.md#1">新冠又来了？中国感染人数增多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14052623.md#1">外交疑云：秦刚仍失踪 谢峰“带伤”露面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052590.md#1">与彼特闹离婚已7年 裘莉或因这事不再纠缠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052538.md#1">吴镇宇14岁儿子费曼自曝有病 宣布退出微博</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052561.md#1">西安突叫停大型演唱活动 陶喆张震岳无法登台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052420.md#1">金奖导演吐肮脏秘密：赚到的钱无法带出中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052161.md#1">余天健检发现肝脏7公分囊肿 医生建议先观察</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046460.md#1">不再误踩地雷！“聆听”让你拥有好人缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052417.md#1">烹饪油氧化速度排名榜 这种油抗氧化第一</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052066.md#1">清洗白色衣物 避免犯这三个错误</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049793.md#1">旅行专家：夏季是预订年终旅行的最佳时间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14052750.md#1">房市排名 现在大家都想搬去这些城市！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104560.md#1">【菁英论坛】习视察央行 人民币面临跳水</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104870.md#1">【晚间新闻】中共紧急发文 严控悼念李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103855.md#1">李克强在上海猝死  分析：疑点重重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103857.md#1">李克强死亡8小时后发丧 有何黑幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103869.md#1">李克强猝死时刻与毛一致 分析：不排除更大地震</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103752.md#1">进驻大陆平台引尴尬 香港视后唐诗咏被叫错名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103712.md#1">梁朝伟抵东京影展大师班 忆被王家卫调教演技</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103421.md#1">为什么会发生夜间盗汗？ 如何改善？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/14/n14053512.htm">北区青聚点台湾连江“岛岛连线”  六县市交流</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053512.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
